--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "engines": {
+    "node": ">=5.0.0",
+    "npm":  ">=3.3.7"
+  },
+  "author": "Ryan Grannell <r.grannell2@gmail.com>",
   "license": "MIT"
 }
